# cilantro

./: .clang-format  .codedocs  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  cilantroConfig.cmake.in  format.sh
.github/workflows/: build.yml  cmake.yml
cmake/: Doxyfile.in  cilantroConfig.cmake.in  config.hpp.in
docs/: Makefile  about.rst  conf.py  getting_started.rst  index.rst  make.bat
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt  cloud_visualizer_example.cpp  connected_component_extraction.cpp  connected_component_segmentation.cpp  connected_component_segmentation_example.cpp  convex_hull.cpp  convex_hull_example.cpp  convex_polyhedron_example.cpp  dok.cpp  flat_convex_hull.cpp  fusion.cpp  grid_downsampler.cpp  grid_downsampler_example.cpp  image_point_cloud_conversions.cpp  image_point_cloud_conversions_example.cpp  image_viewer.cpp  image_viewer_example.cpp  iterative_closest_point.cpp  iterative_closest_point_example.cpp  kd_tree.cpp  kd_tree_example.cpp  kmeans.cpp  kmeans_example.cpp  matrix_io.cpp  matrix_io_example.cpp  mean_shift.cpp  mean_shift_example.cpp  model_estimators_example.cpp  multidimensional_scaling.cpp  multidimensional_scaling_example.cpp  non_rigid_icp.cpp  normal_estimation.cpp  normal_estimation_example.cpp  pca_example.cpp  plane_estimator_example.cpp  ply_io.cpp  ply_io_example.cpp  ply_reader_example.cpp  principal_component_analysis.cpp  principal_component_analysis_example.cpp  (+20 more)
examples/test_clouds/: frame_1.ply  frame_2.ply
include/cilantro/: cartesian_grid.hpp  cilantro.hpp  clustering.hpp  clustering_base.hpp  colormap.hpp  colormaps.h  common_accumulators.hpp  common_pair_evaluators.hpp  common_renderables.hpp  common_similarity_evaluators.hpp  common_transformable_feature_adaptors.hpp  connected_component_extraction.hpp  connected_component_segmentation.hpp  convex_hull.hpp  convex_hull_utilities.hpp  convex_polyhedron.hpp  convex_polytope.hpp  core.hpp  correspondence.hpp  correspondence_search.hpp  correspondence_search_combined_metric_adaptor.hpp  correspondence_search_combined_metric_combiner.hpp  correspondence_search_combined_metric_proxy.hpp  correspondence_search_kd_tree.hpp  correspondence_search_kd_tree_utilities.hpp  correspondence_search_oracle.hpp  correspondence_search_projective.hpp  data_containers.hpp  data_matrix_map.hpp  flat_convex_hull_3d.hpp  grid_accumulator.hpp  grid_downsampler.hpp  icp_base.hpp  icp_common_feature_adaptors.hpp  icp_common_instances.hpp  icp_core.hpp  icp_correspondence_search.hpp  icp_correspondence_search_kd_tree.hpp  icp_correspondence_search_projective.hpp  icp_non_rigid_combined_metric_dense_3d.hpp  (+63 more)
include/cilantro/clustering/: clustering_base.hpp  connected_component_extraction.hpp  kmeans.hpp  mean_shift.hpp  spectral_clustering.hpp
include/cilantro/core/: common_accumulators.hpp  common_pair_evaluators.hpp  correspondence.hpp  covariance.hpp  data_containers.hpp  grid_accumulator.hpp  grid_downsampler.hpp  image_point_cloud_conversions.hpp  kd_tree.hpp  nearest_neighbors.hpp  normal_estimation.hpp  openmp_reductions.hpp  principal_component_analysis.hpp  random.hpp  space_transformations.hpp  spectral_embedding_base.hpp
include/cilantro/correspondence_search/: common_transformable_feature_adaptors.hpp  correspondence_search_kd_tree.hpp  correspondence_search_kd_tree_utilities.hpp  correspondence_search_oracle.hpp  correspondence_search_projective.hpp
include/cilantro/model_estimation/: ransac_base.hpp  ransac_hyperplane_estimator.hpp  ransac_transform_estimator.hpp
include/cilantro/registration/: correspondence_search_combined_metric_adaptor.hpp  correspondence_search_combined_metric_combiner.hpp  icp_base.hpp  icp_common_instances.hpp  icp_single_transform_combined_metric.hpp  icp_single_transform_point_to_point_metric.hpp  icp_warp_field_combined_metric_dense.hpp  icp_warp_field_combined_metric_sparse.hpp  transform_estimation.hpp  warp_field_estimation.hpp  warp_field_utilities.hpp
include/cilantro/spatial/: convex_hull_utilities.hpp  convex_polytope.hpp  flat_convex_hull_3d.hpp  space_region.hpp
include/cilantro/utilities/: io_utilities.hpp  multidimensional_scaling.hpp  nearest_neighbor_graph_utilities.hpp  ply_io.hpp  point_cloud.hpp  random.hpp  timer.hpp
include/cilantro/visualization/: colormap.hpp  common_renderables.hpp  image_viewer.hpp  renderable.hpp  visualizer.hpp  visualizer_handler.hpp
include/sisyphus/: cloud_visualizer.hpp  kd_tree.hpp  matrix_io.hpp  normal_estimation.hpp  pca.h  pca.hpp  ply_io.h  ply_io.hpp  ply_reader.h  point_cloud.hpp  visualizer.hpp  voxel_grid.hpp
src/: cloud_visualizer.cpp  colormap.cpp  colormaps.cpp  common_renderables.cpp  connected_component_segmentation.cpp  convex_hull.cpp  convex_polyhedron.cpp  convex_polytope.cpp  image_point_cloud_conversions.cpp  image_viewer.cpp  io.cpp  iterative_closest_point.cpp  kd_tree.cpp  kmeans.cpp  model_estimators.cpp  normal_estimation.cpp  pca.cpp  plane_estimator.cpp  ply_io.cpp  ply_reader.cpp  point_cloud.cpp  principal_component_analysis.cpp  registration.cpp  renderable.cpp  renderables.cpp  rigid_transform_estimator.cpp  space_region.cpp  transform_estimation.cpp  transform_estimation_utilities.cpp  visualizer.cpp  visualizer_handler.cpp  voxel_grid.cpp
src/samples/: ply_reader_sample.cpp
src/visualization/: common_renderables.cpp  image_viewer.cpp  renderable.cpp  visualizer.cpp  visualizer_handler.cpp
